# replydesk

./: .aider.chat.history.md  .gitignore  DIRECTORY_SUBMISSIONS.md  DOMAIN_IDEAS.md  FINAL_SUMMARY.md  MASTER_LAUNCH_PLAN.md  PROJECT_SUMMARY.md  SOCIAL_POSTS.md  feature-gap-agent.ts  install-gate.sh  install-hooks.sh  new-project-check.sh  set-vercel-env.ts
.gstack/: browse-audit.jsonl
adsense-compliance/: generate.ts
aigotitwrong/: .env.example  .gitignore  DEPLOY.md  ecosystem.config.js  package.json
auth-api/: ecosystem.config.js  package-lock.json  package.json
badminton/: README.md  booking.py  config.py  dry_run_test.py  full_flow_test.py  get_chat_id.py  requirements.txt  saturday_test.py  scheduler.py  setup.sh  state.json  test_booking.py  test_run.py
business-agent/: ecosystem.config.cjs  package-lock.json  package.json
claude-account-manager/: README.md  (+2 more)
stockpulse/: CLAUDE.md  Procfile  pyproject.toml  requirements.txt  setup-server.sh  sync-and-deploy.sh
stockpulse/app/: config.py  deps.py
stockpulse/app/routers/: affiliates.py  auth.py  chat.py  compare.py  dashboard.py  internal.py  watchlist.py
stockpulse/app/schemas/: affiliates.py  auth.py
stockpulse/app/services/: agent.py  dashboard_data.py  market_data.py  notifications.py  supabase_client.py  watchlist.py
stockpulse/app/templates/: brokers.html  dashboard.html  landing.html
stockpulse/n8n/workflows/: stock_prefetch.json  supabase_keepalive.json
stockpulse/nginx/: nginx.conf
stockpulse/nginx/conf.d/: default.conf
stockpulse/tests/: conftest.py  test_market_data.py
(+411 files in other folders)
