[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sharemarket-ai-assistant"
version = "0.1.0"
description = "AI-powered share market assistant using Claude, FastAPI, and yfinance"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "anthropic>=0.40.0",
    "groq>=0.11.0",
    "yfinance>=0.2.40",
    "pydantic-settings>=2.5.0",
    "python-dotenv>=1.0.0",
    "supabase>=2.0.0",
    "upstash-redis>=1.0.0",
    "httpx>=0.27.0",
    "email-validator>=2.0.0",
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
